Closed Bug 995421 Opened 11 years ago Closed 11 years ago

Fix out-of-order comment in TransparentTypedObject::class_

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla31

People

(Reporter: sstangl, Assigned: sstangl)

Details

Attachments

(1 file)

Noticed while working on other things, but it doesn't fold nicely into any patch, and I don't want to forget. There's no way this patch deserves a bug, but the tree has been closed all day, and I habitually abuse checkin-needed for stress relief. No review necessary for obvious comment change.
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: