Bug 995421 - Fix out-of-order comment in TransparentTypedObject::class_.